# minilab3synth

./: .gitignore  README.md  pyproject.toml
minilab3synth/: .start.py.swp  minilab.py  start.py
